# bookmark-enrichment

./: .gitignore  aws_lambda.py  data_generation.py  enrich.py  main.py  models.py  notion_io.py  pyproject.toml  scraping.py  utils.py
